--- a/index.html
+++ b/index.html
@@ -27,20 +27,25 @@
         </li>
       </ul>
     </div>
-    <h2>Projects</h2>
+    <h2>Projets</h2>
     <div>
-      <h3><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenants de l'Amérique Latine #eLifeAmbassadors</h3>
-      <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les developpements internationaux</p>
-      <p>Ce site a été crée pour faciliter l'accés des jeunes chercheurs latinoamericains aux informations des bourses et financements</p>
+      <h3><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3>
+      <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux</p>
+      <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements</p>
+    </div>
+     <div>
+      <h3>Clockwork - En Progrès</h3>
+      <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.</p>
+      <p>En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
     </div>
     <div>
       <h3>Reecover</h3>
-      <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernieres semaines au Wagon.</p>
-      <p>C'est une application Rails pour les sportives en fin de carriére qui cherchent des information spour développer son projet de reconversion professionnelle</p>
+      <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.</p>
+      <p>C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
     </div>
     <div>
       <h3>Miss Mocktail</h3>
-      <p>Projet développé de maniére individuelle pendant 2 jours au Wagon</p>
+      <p>Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
     </div>
   </body>
 </html>
