--- a/app/index.html
+++ b/app/index.html
@@ -16,14 +16,15 @@
   <body>
     <div>
       <h1>Natalia Vega</h1>
-      <h2>Devenue <strong>Développeuse Fullstack</strong> après le bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>, 2019</h2>
-      <h3>Je suis passionnée par la photographie, je cherche la harmonie visuel et essentiel, la logique et l'ordre sont des moteurs dans ma vie</h3>
+      <h2>Je suis une <strong>Développeuse Fullstack</strong> après avoir fait le bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>, 2019</h2>
+      <h3>Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde.</h3>
+      <!-- <h3>Je suis passionnée par la photographie, je cherche la harmonie visuel et essentiel, la logique et l'ordre sont des moteurs dans ma vie</h3> -->
       <ul class="list-inline">
         <li class="text-center">
           <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
         </li>
         <li class="text-center">
-          <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"> <i class="fab fa-linkedin"></i>Linkedin</a>
+          <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"><i class="fab fa-linkedin"></i>Linkedin</a>
         </li>
       </ul>
     </div>
@@ -32,20 +33,24 @@
       <h3><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3>
       <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux</p>
       <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements</p>
+      <a href="" target="_blank"><img src="images/ECR_LARC.png" alt="ECR-LARC"></a>
     </div>
      <div>
       <h3>Clockwork - En Progrès</h3>
       <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.</p>
       <p>En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
+       <a href="" target="_blank"><img src="" alt=""></a>
     </div>
     <div>
       <h3>Reecover</h3>
       <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.</p>
       <p>C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
+      <a href="https://www.reecover.fr" target="_blank"><img src="images/homepage-reecover-og-image-1200x630.png" alt="reecover"></a>
     </div>
     <div>
       <h3>Miss Mocktail</h3>
       <p>Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
-    </div>
+      <a href="https://missmocktail.herokuapp.com/" target="_blank"><img src="" alt="miss_mocktail"></a>
+      </div>
   </body>
 </html>
