css + modif index

--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,8 @@
     <h2>Projets</h2>
     <div>
       <h3><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3>
-      <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux</p>
-      <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements</p>
+      <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux.</p>
+      <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
       <a href="" target="_blank"><img src="images/ECR_LARC.png" alt="ECR-LARC"></a>
     </div>
      <div>
