--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,14 @@
     <meta property="og:site_name" content="Natalia Vega"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Sarabun:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div>
       <h1>Natalia Vega</h1>
-      <h2>Je suis une <strong>Développeuse Fullstack</strong> après avoir fait le bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>, 2019</h2>
-      <h3>Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde.</h3>
+      <h3>Je suis une <strong>Développeuse Fullstack</strong> après avoir fait le bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>, 2019</h3>
+      <h4>Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde.</h4>
       <!-- <h3>Je suis passionnée par la photographie, je cherche la harmonie visuel et essentiel, la logique et l'ordre sont des moteurs dans ma vie</h3> -->
       <ul class="list-inline">
         <li class="text-center">
@@ -30,25 +30,25 @@
     </div>
     <h2>Projets</h2>
     <div>
-      <h3><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3>
+      <h4><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h4>
       <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux.</p>
       <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
       <a href="" target="_blank"><img src="images/ECR_LARC.png" alt="ECR-LARC"></a>
     </div>
      <div>
-      <h3>Clockwork - En Progrès</h3>
+      <h4>Clockwork - En Progrès</h4>
       <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.</p>
       <p>En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
        <a href="" target="_blank"><img src="" alt=""></a>
     </div>
     <div>
-      <h3>Reecover</h3>
+      <h4>Reecover</h4>
       <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.</p>
       <p>C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
       <a href="https://www.reecover.fr" target="_blank"><img src="images/homepage-reecover-og-image-1200x630.png" alt="reecover"></a>
     </div>
     <div>
-      <h3>Miss Mocktail</h3>
+      <h4>Miss Mocktail</h4>
       <p>Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
       <a href="https://missmocktail.herokuapp.com/" target="_blank"><img src="" alt="miss_mocktail"></a>
       </div>
