--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,9 @@
-<doctype html>
+<DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Natalia Vega | Développeuse Fullstack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Natalia Vega | Programmer">
     <meta property="og:title" content="Natalia Vega | Programmer">
     <meta property="og:image" content="images/facebook-profile.jpg">
@@ -33,13 +34,13 @@
       <h4><strong>ECR-LARC</strong> Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h4>
       <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux.</p>
       <p>Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
-      <a href="" target="_blank"><img src="images/ECR_LARC.png" alt="ECR-LARC"></a>
+      <a href="" target="_blank"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
     </div>
      <div>
       <h4>Clockwork - En Progrès</h4>
       <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.</p>
       <p>En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
-       <a href="" target="_blank"><img src="" alt=""></a>
+       <a href="" target="_blank"><img src="images/clockwork.jpg" alt=""></a>
     </div>
     <div>
       <h4>Reecover</h4>
@@ -50,7 +51,7 @@
     <div>
       <h4>Miss Mocktail</h4>
       <p>Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
-      <a href="https://missmocktail.herokuapp.com/" target="_blank"><img src="" alt="miss_mocktail"></a>
+      <a href="https://missmocktail.herokuapp.com/" target="_blank"><img src="images/missmocktail.jpg" alt="miss_mocktail"></a>
       </div>
   </body>
 </html>
