--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div>
+    <div class="container">
       <header id="header">
         <div class="inner">
           <h1>Natalia Vega</h1>
