--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="main">
       <section id="first">
         <header class="major">
-          <h3><strong>Développeuse Fullstack,</strong> j'ai récemment fini ma formation  au bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>(Hiver, 2019)</h3>
+          <h3><strong>Développeuse Fullstack,</strong> j'ai récemment fini ma formation  au bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a>(Batch#220, Hiver 2019)</h3>
           <br>
           <h4>#RubyOnRails #PostgreSQL #heroku #git #HTML #CSS #Prototyping #InterfaceDesign #Photoshop</h4>
           <br>
