--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <DOCTYPE HTML>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136760312-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-136760312-1');
+    </script>
     <meta charset="utf-8">
     <title>Natalia Vega | Développeuse Fullstack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -93,6 +102,7 @@
               Veuillez à completer tous les champs.
             </div>
             <input type="submit" class="form-group btn btn-success" value="Envoyer">
+            <input type="hidden" name="_next" value="https://v-natalia.github.io/portfolio/">
           </form>
         </div>
       </section>
