--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
               <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
           </div>
           <div class="col-6 col-12-xsmall work-item">
-            <a href="" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
+            <a href="https://github.com/v-natalia/ECR_LARC-eLifeAmbassadors" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
             <h3><strong>ECR-LARC</strong> <!-- <br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors --></h3>
             <p><!-- eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine.  -->L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
             <p><small class="text-muted">En progrès</small></p>
           </div>
           <div class="col-6 col-12-xsmall work-item">
-            <a href="" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
+            <a href="https://github.com/v-natalia/clockwork" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
             <h3>Clockwork</h3>
             <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
             <p><small class="text-muted">En Progrès</small></p>
