modif class + text

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Reecover<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p>Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
+                <p class="text-justify">Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">ECR-LARC<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p>eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
+                <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
                 <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
@@ -102,7 +102,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Clockwork<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p>Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS.En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
+                <p class="text-justify">Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS. En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails qui ressemblera aux enfants nés de la technique pomodoro et une liste de tâches. Ce sera un outil pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
                 <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
@@ -115,7 +115,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Miss Mocktail<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p>Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
+                <p class="text-justify">Projet développé de manière individuelle pendant 2 jours au Wagon.</p>
                 <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
