modif responsiveness 480 px

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="inner">
           <h1>Natalia Vega</h1>
           <a href="https://v-natalia.github.io/profile/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h3>Développeuse Fullstack</h3>
+          <h4>Développeuse Fullstack</h4>
           <ul class="list-inline">
             <li class="text-center">
               <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i></a>
@@ -50,7 +50,7 @@
     <div id="main">
       <section id="first">
         <header class="major text-justify">
-          <h3><strong>Développeuse Fullstack,</strong> j'ai récemment fini ma formation  au bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a> (Batch#220, Hiver 2019)</h3>
+          <h4><strong>Développeuse Fullstack,</strong> j'ai récemment fini ma formation  au bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a> (Batch#220, Hiver 2019)</h4>
           <br>
           <div class="tags">
             <span class="badge badge-light">#RubyOnRails</span>
@@ -68,9 +68,9 @@
         </header>
       </section>
       <section id="cards">
-        <h2>Projets</h2>
+        <h3>Projets</h3>
         <div class="row">
-          <div class="col-6 col-12-xsmall work-item">
+          <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://www.reecover.fr" target="_blank" class="image fit thumb"><img src="images/homepage-reecover-og-image-1200x630.png" alt="reecover"></a>
@@ -78,11 +78,11 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Reecover<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon.C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
+                <p class="text-justify">Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon. C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
               </div>
             </div>
           </div>
-          <div class="col-6 col-12-xsmall work-item">
+          <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://github.com/v-natalia/ECR_LARC-eLifeAmbassadors" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
@@ -95,7 +95,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6 col-12-xsmall work-item">
+          <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://github.com/v-natalia/clockwork" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
@@ -108,7 +108,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6 col-12-xsmall work-item">
+          <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://missmocktail.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/missmocktail.jpg" alt="miss_mocktail"></a>
