change link project ecr

--- a/index.html
+++ b/index.html
@@ -85,13 +85,12 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
-                <a href="https://github.com/v-natalia/ECR_LARC-eLifeAmbassadors" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
+                <a href="https://larcecr.github.io/" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
                 <h3 class="open-reveal"><strong>ECR-LARC</strong><br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">ECR-LARC<i class="material-icons fas fa-times right text-small"></i></span></h3>
                 <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
-                <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
           </div>
