add link to js30

--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
+                <a href="https://v-natalia.github.io/js-30/" target="_blank" class="image fit thumb"><img src="images/arrow.jpg" alt="reecover"></a>
+                <h3 class="open-reveal"><strong>Blog</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
+              </div>
+              <div class="card-reveal">
+                <h3><span class="card-title">Blog<i class="material-icons fas fa-times right text-small"></i></span></h3>
+                <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Pour le moment j'écris sur le "javascript challenge" que je suis en train de faire. En anglais.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 work-item">
+            <div class="card">
+              <div class="card-content">
                 <a href="https://larcecr.github.io/" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
                 <h3 class="open-reveal"><strong>ECR-LARC</strong><br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
