--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
-                <a href="https://missmocktail.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/missmocktail.jpg" alt="miss_mocktail"></a>
+                <a href="https://github.com/v-natalia/rails-mister-cocktail" target="_blank" class="image fit thumb"><img src="images/missmocktail.jpg" alt="miss_mocktail"></a>
                 <h3 class="open-reveal"><strong>Miss Mocktail</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
